# itr-ast

./: .gitmodules  .ocamlformat  Dockerfile  Makefile  README.md  cloudbuild.yaml  dune-project  fix-engine.opam  itr-ast.opam  pp.sh
datetime/src-core/: datetime.ml  dune  ints.ml
datetime/src-core-pp/: datetime_json.ml  encode_datetime.ml  parse_datetime.ml
datetime/src-core-utils-pp/: current_time.ml  dune
html/: editor.html
html/js/: imandraTestScriptMode.js
src/: dune  itr_ast.ml  itr_ast_decoder.ml  itr_ast_json_pp.ml  itr_ast_legacy_decoders.ml  itr_ast_pp.ml  itr_evaluator.ml
src/datetime/: datetime.ml  dune  encode_datetime.ml  ints.ml
src/src-core/: datetime.ml
src/src-core-pp/: dune  encode_datetime.ml
test/: ast_pp_test.expected  ast_pp_test.ml  dune  evaluator_test.expected  evaluator_test.ml  itr_ast_test.ml  pp.ml  simple_limit.expected  simple_limit.json  test1.expected  test1.json  test2.expected  test2.json  test3.expected  test3.json  test4.expected  test4.json
