(tests
 (names ast_pp_test)
 (modules ast_pp_test)
 (libraries itr-ast))

(executable
 (name itr_ast_test)
 (package itr-ast)
 (public_name itr_ast_test)
 (flags :standard -warn-error -A+8+39 -w -33-58)
 (modules itr_ast_test)
 (libraries itr-ast))

(executable
 (name pp)
 (package itr-ast)
 (public_name pp)
 (flags :standard -warn-error -A+8+39 -w -33-58)
 (modules pp)
 (libraries itr-ast))

(rule
 (alias runtest)
 (action
  (run %{exe:itr_ast_test.exe} all))
 (targets simple_limit.out test1.out test2.out test3.out test4.out)
 (deps
  (glob_files *.json)))

(rule
 (alias runtest)
 (action
  (diff simple_limit.expected simple_limit.out)))

(rule
 (alias runtest)
 (action
  (diff test1.expected test1.out)))

(rule
 (alias runtest)
 (action
  (diff test2.expected test2.out)))

(rule
 (alias runtest)
 (action
  (diff test3.expected test3.out)))
